Place feed list items in respective file Fixed double scrollbar

--- a/frontend/src/app/feeds/feed-list/feed-list.component.scss
+++ b/frontend/src/app/feeds/feed-list/feed-list.component.scss
@@ -1,7 +1,5 @@
 :host {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
+	flex-grow: 1;
 }
 
 .search-field {
