--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -31,9 +31,15 @@ body {
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+app-root {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
 
 .feeder-main-container {
-	flex-grow: 1;
+	height: 100%;
 
 	> mat-drawer {
 		width: 250px;
